/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package cuttlefish.cvd.config;

message Crosvm {
  optional bool enable_sandbox = 1;
}

message Graphics {
  repeated Display displays = 1;
  optional bool record_screen = 2;
}

message Display {
  optional uint32 width = 1;
  optional uint32 height = 2;
  optional uint32 dpi = 3;
  optional uint32 refresh_rate_hertz = 4;
}

message Security {
  optional string serial_number = 1;
  optional string use_random_serial = 2;
  optional bool guest_enforce_security = 3;
}
